// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jfRwit jYSfgb"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jfRwit jYSfgb"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jfRwit jYSfgb"
>
  <span
    className="sc-sQjNv emQtTy"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jfRwit jYSfgb"
>
  <div
    className="sc-kLOYGq iBOPrW"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jfRwit bjKdCY"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jfRwit dLXgg"
  size="small"
/>
`;
